syntax = "proto3";

package meteroid.portal.checkout.v1;

import "portal/checkout/v1/models.proto";
import "api/customers/v1/models.proto";
import "api/invoices/v1/models.proto";

message GetSubscriptionCheckoutRequest {

}

message GetSubscriptionCheckoutResponse {
  Checkout checkout = 1;
}

message UpdateCustomerRequest {
  api.customers.v1.PatchCustomer customer = 1;
}

message UpdateCustomerResponse {
  api.customers.v1.Customer customer = 1;
}

message SetupIntentRequest {
  string connection_id = 1;
}
message SetupIntentResponse {
  SetupIntent setup_intent = 1;
}

message ConfirmCheckoutRequest {
  string payment_method_id = 1;
  uint64 displayed_amount = 2;
  string displayed_currency = 3;
}
message ConfirmCheckoutResponse {
  api.invoices.v1.Transaction transaction = 1;
}

message AddPaymentMethodRequest {
  string connection_id = 1;
  string external_payment_method_id = 2;
}
message AddPaymentMethodResponse {
  api.customers.v1.CustomerPaymentMethod payment_method = 1;
}
service PortalCheckoutService {
  rpc GetSubscriptionCheckout(GetSubscriptionCheckoutRequest) returns (GetSubscriptionCheckoutResponse) {}
  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse) {}
  rpc SetupIntent(SetupIntentRequest) returns (SetupIntentResponse) {}
  rpc ConfirmCheckout(ConfirmCheckoutRequest) returns (ConfirmCheckoutResponse) {}
  rpc AddPaymentMethod(AddPaymentMethodRequest) returns (AddPaymentMethodResponse) {}
}
